WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287963
[SwiftUI] Changing the `webViewContentBackground` value doesn't always apply the new value on macOS
https://bugs.webkit.org/show_bug.cgi?id=287963
Summary
[SwiftUI] Changing the `webViewContentBackground` value doesn't always apply ...
Richard Robinson
Reported
2025-02-19 08:45:23 PST
rdar://145142533
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2025-02-19 08:48:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40859
EWS
Comment 2
2025-02-23 23:27:07 PST
Committed
290935@main
(a9d2d3b8f586): <
https://commits.webkit.org/290935@main
> Reviewed commits have been landed. Closing PR #40859 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug